--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>TIM ui</title>
+    <title>PIMMI ui</title>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
             crossorigin="anonymous"></script>
@@ -13,7 +13,7 @@
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
     <script src="libs/conf.js"></script>
-    <script src="libs/tim-ui.js"></script>
+    <script src="libs/pimmi-ui.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
@@ -23,7 +23,7 @@
 <body>
 
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
-    <h5 class="my-0 mr-md-auto font-weight-normal">Twitter images clustering viz</h5>
+    <h5 class="my-0 mr-md-auto font-weight-normal">PIMMI - Python IMage MIning - UI</h5>
     <div class="my-0 mr-md-auto font-weight-normal">
         <button onclick="filterAndSort()">filter</button> :
         nb. images <input type="number" min="1" value="1" id="filter-images"/>
